cluster/apps/media/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-internal
  namespace: media
spec:
  ingressClassName: nginx-internal
  rules:
    - host: &host data.sparks.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: acme-crt-secret-sparks-codes
